--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ img {
 
 body {
   margin: 0;
-  background-color: #ffffff;
+  background-image: url("../img/136DB0EE-11C8-44A7-AB22-24D88E62A480.jpeg");
 }
 
 header h1 {
